--- a/index.html
+++ b/index.html
@@ -2,31 +2,12 @@
 
 <head>
 
-<title>javascript</title>
+<title>Introduction to Javascript</title>
 
 </head>
 
 <body>
-
-<script language="javascript" type="text/javascript">
-
-var name
-
-var age
-
-var country
-
-
-name=prompt("enter your name :","")
-
-age=prompt("enter your age :","")
-
-country=prompt("enter your country :","")
-
-document.write(name+ " is " +age+ " years old " +country+ " citizen ")
-
-</script>
-
+    <script src="script.js"></script>
 </body>
 
 </html>
