--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
+<!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>Introduction to Javascript</title>
+  </head>
 
-<head>
-
-<title>Introduction to Javascript</title>
-
-</head>
-
-<body>
+  <body>
     <script src="script.js"></script>
-</body>
-
+  </body>
 </html>
-
-
-
